# fbp-mod

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: iter.rs  main.rs
