[package]
name = "fbp-mod"
version = "1.0.0"
authors = ["Lumina Sapphira <CerulanLumina@users.noreply.github.com>"]
description = "Modify Factorio blueprints from the command line"
repository = "https://github.com/CerulanLumina/fbp-mod"
homepage = "https://github.com/CerulanLumina/fbp-mod"
license = "MPL-2.0"
keywords = ["factorio", "command-line", "blueprint"]
categories = ["command-line-utilities", "games"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
either = "1.12.0"
factorio-blueprint = { git = "https://github.com/coriolinus/factorio-blueprint.git", rev = "dda08661b6982d3edd9f9db9f05ab215b30e14ed" }
jsonxf = "1.1.1"
serde_json = "1.0.117"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
